tests/baselines/reference/extBaseClass2.errors.txt
extBaseClass2.ts(2,31): error TS2339: Property 'B' does not exist on type 'typeof M'.
extBaseClass2.ts(7,29): error TS2304: Cannot find name 'B'.


==== extBaseClass2.ts (2 errors) ====
    module N {
        export class C4 extends M.B {
                                  ~
!!! error TS2339: Property 'B' does not exist on type 'typeof M'.
        }
    }
    
    module M {
        export class C5 extends B {
                                ~
!!! error TS2304: Cannot find name 'B'.
        }
    }
    